force-app/main/default/objects/SFDC_PTO_Request__c/SFDC_PTO_Request__c.object-meta.xml
<CustomObject>
    <label>PTO Request</label>
    <nameField>
        <label>PTO Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PTO Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>