force-app/main/default/objects/SFDC_PTO_Request__c/fields/Days_Off__c.field-meta.xml
<CustomField>
    <fullName>Days_Off__c</fullName>
    <formula>(Request_End_Date__c  -  Request_Start_Date__c) + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Off</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>