force-app/main/default/objects/SFDC_PTO_Request__c/fields/Link_to_Approval_Request__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Approval_Request__c</fullName>
    <label>Link to Approval Request</label>
    <length>255</length>
    <type>Text</type>
</CustomField>