force-app/main/default/objects/SFDC_PTO_Request__c/fields/Paid_Time_Off__c.field-meta.xml
<CustomField>
    <fullName>Paid_Time_Off__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paid Time Off?</label>
    <type>Checkbox</type>
</CustomField>