force-app/main/default/objects/SFDC_PTO_Request__c/fields/Request_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_End_Date__c</fullName>
    <label>Request End Date</label>
    <type>Date</type>
</CustomField>