force-app/main/default/objects/SFDC_PTO_Request__c/fields/Request_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Start_Date__c</fullName>
    <label>Request Start Date</label>
    <type>Date</type>
</CustomField>