force-app/main/default/objects/SFDC_PTO_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Request_Start_Date__c</columns>
    <columns>Request_End_Date__c</columns>
    <columns>Date_of_Request__c</columns>
    <columns>Days_Off__c</columns>
    <columns>Paid_Time_Off__c</columns>
    <columns>Request_Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>